[gd_scene load_steps=7 format=3 uid="uid://b7l5l81klp00s"]

[ext_resource type="Script" uid="uid://b0tlyb7lk1mxk" path="res://ui/main_menu/main_menu.gd" id="1_3fvnl"]
[ext_resource type="Texture2D" uid="uid://bgmt7f7a5ottn" path="res://resources/UI/title.png" id="2_mu8pm"]
[ext_resource type="Texture2D" uid="uid://cck4b5syc75ny" path="res://resources/UI/button_white.png" id="3_3c04x"]
[ext_resource type="Script" uid="uid://cc3y8j121b3yc" path="res://ui/hover_button.gd" id="4_3c04x"]
[ext_resource type="FontFile" uid="uid://bm6q87o23fb2x" path="res://resources/font/arcadeclassic.regular.ttf" id="4_i5wg5"]
[ext_resource type="AudioStream" uid="uid://bbaus21d53pel" path="res://resources/Audio/Music/title.ogg" id="6_joh67"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fvnl")

[node name="Control" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.101961, 0.12549, 1)

[node name="title_screen_bg" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(360, 300)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_right = 280.0
offset_bottom = 340.0
grow_horizontal = 2
texture = ExtResource("2_mu8pm")
expand_mode = 1
stretch_mode = 5

[node name="start_button" type="TextureButton" parent="."]
self_modulate = Color(0.870588, 0.305882, 0.803922, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -24.0
offset_right = 192.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_3c04x")
stretch_mode = 0
script = ExtResource("4_3c04x")

[node name="Label" type="Label" parent="start_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.980392, 0.894118, 0.0392157, 1)
theme_override_fonts/font = ExtResource("4_i5wg5")
theme_override_font_sizes/font_size = 29
text = "Start Game"

[node name="settings_button" type="TextureButton" parent="."]
self_modulate = Color(0.290196, 0.886275, 0.745098, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 72.0
offset_right = 192.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_3c04x")
stretch_mode = 0
script = ExtResource("4_3c04x")

[node name="Label" type="Label" parent="settings_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.321569, 0.431373, 0.890196, 1)
theme_override_fonts/font = ExtResource("4_i5wg5")
theme_override_font_sizes/font_size = 29
text = "Settings"

[node name="exit_button" type="TextureButton" parent="."]
self_modulate = Color(0.909804, 0.917647, 0.376471, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 168.0
offset_right = 192.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_3c04x")
stretch_mode = 0
script = ExtResource("4_3c04x")

[node name="Label" type="Label" parent="exit_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.737255, 0.247059, 0.87451, 1)
theme_override_fonts/font = ExtResource("4_i5wg5")
theme_override_font_sizes/font_size = 29
text = "Exit"

[node name="Title" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_joh67")
autoplay = true

[connection signal="mouse_entered" from="start_button" to="start_button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="start_button" to="start_button" method="_on_mouse_exited"]
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="settings_button" to="settings_button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="settings_button" to="settings_button" method="_on_mouse_exited"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="exit_button" to="exit_button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="exit_button" to="exit_button" method="_on_mouse_exited"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
